Revision history for Geo::GoogleEarth::AutoTour

{{$NEXT}}

1.03      2016-07-06 08:54:53-07:00 America/Los_Angeles
        - Fixing missing files in distribution

1.01      Wed Jul  6  8:50:25 PDT 2016
        - First version, released on an unsuspecting world.